Adicionando o Footer e Readme

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -71,6 +71,16 @@ a {
   );
 }
 
+footer {
+  text-align: right;
+  padding: 0.5rem;
+  margin: 0;
+}
+
+footer img {
+  width: 100px;
+}
+
 @media (min-width: 768px) {
   .main {
     width: 70%;
